--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "graphql": "^15.5.1",
+    "graphql-resolvers": "^0.4.2",
+    "graphql-scalars": "^1.10.0",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.7.1",
     "sequelize": "^6.6.5"
