--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "start": "nodemon --exec babel-node src/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "SET NODE_ENV=development&&nodemon -r dotenv/config --exec babel-node src/index.js dotenv_config_path=.env.development",
+    "start:test": "SET NODE_ENV=test&&nodemon -r dotenv/config --exec babel-node src/index.js dotenv_config_path=.env.test",
+    "test": "SET NODE_ENV=test&&mocha -r dotenv/config --require @babel/register 'src/**/*.test.js' dotenv_config_path=.env.test"
   },
   "keywords": [],
   "author": "srianbury",
@@ -14,9 +15,14 @@
     "@babel/core": "^7.15.0",
     "@babel/node": "^7.14.9",
     "@babel/preset-env": "^7.15.0",
+    "axios": "^0.21.1",
+    "chai": "^4.3.4",
+    "chai-exclude": "^2.0.3",
+    "mocha": "^9.0.3",
     "nodemon": "^2.0.12"
   },
   "dependencies": {
+    "@babel/register": "^7.15.3",
     "apollo-server": "^3.1.2",
     "apollo-server-express": "^3.1.2",
     "bcrypt": "^5.0.1",
