--- a/package.json
+++ b/package.json
@@ -6,12 +6,16 @@
   "scripts": {
     "start": "SET NODE_ENV=development&&nodemon -r dotenv/config --exec babel-node src/index.js dotenv_config_path=.env.development",
     "start:test": "SET NODE_ENV=test&&nodemon -r dotenv/config --exec babel-node src/index.js dotenv_config_path=.env.test",
-    "test": "SET NODE_ENV=test&&mocha -r dotenv/config --require @babel/register 'src/**/*.test.js' dotenv_config_path=.env.test"
+    "test": "SET NODE_ENV=test&&mocha -r dotenv/config --require @babel/register 'src/**/*.test.js' dotenv_config_path=.env.test",
+    "clean": "rm -rf build && mkdir build",
+    "build-babel": "babel -d ./build ./src -s",
+    "build": "npm run clean && npm run build-babel"
   },
   "keywords": [],
   "author": "srianbury",
   "license": "ISC",
   "devDependencies": {
+    "@babel/cli": "^7.14.8",
     "@babel/core": "^7.15.0",
     "@babel/node": "^7.14.9",
     "@babel/preset-env": "^7.15.0",
